syntax = "proto3";

package careerup.v1;

option go_package = "github.com/careerup/proto/v1;v1";
option java_package = "com.careerup.proto.v1";
option java_multiple_files = true;

// User represents a CareerUP user
message User {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  string hometown = 5;
  repeated string interests = 6;
  string created_at = 7;
  string updated_at = 8;
}

// RegisterRequest is used to create a new user
message RegisterRequest {
  string email = 1;
  string password = 2;
  string first_name = 3;
  string last_name = 4;
}

// LoginRequest is used to authenticate a user
message LoginRequest {
  string email = 1;
  string password = 2;
}

// LoginResponse contains the authentication tokens
message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  User user = 3;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  User user = 1;
}

// AuthService handles user authentication
service AuthService {
  rpc Register(RegisterRequest) returns (User) {}
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc GetCurrentUser(GetCurrentUserRequest) returns (User) {}
  rpc UpdateUser(UpdateUserRequest) returns (User) {}
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message GetCurrentUserRequest {}

message UpdateUserRequest {
  string first_name = 1;
  string last_name = 2;
  string hometown = 3;
  repeated string interests = 4;
} 